[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/ui/square02_001-uhd.png" type="Texture" id=1]
[ext_resource path="res://scripts/UI/menus/MainLevelTile.gd" type="Script" id=2]
[ext_resource path="res://sheets/ui/ui_diff_icons.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Pusab.tres" type="DynamicFont" id=4]
[ext_resource path="res://sheets/ui/ui_sheet.png" type="Texture" id=5]
[ext_resource path="res://prefabs/UI/SceneButton.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 135, 145 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 145, 0, 135, 145 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 310, 0, 135, 145 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 475, 0, 135, 145 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 185, 135, 145 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 15, 370, 135, 145 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 348, 370, 140, 145 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3599.61, 3279.8, 93.1172, 89.0657 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="SceneButton" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -160.0
margin_right = 512.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 512, 160 )
texture_normal = null

[node name="MainLevelTile" type="NinePatchRect" parent="SceneButton"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 29
patch_margin_top = 31
patch_margin_right = 29
patch_margin_bottom = 34

[node name="DifficultyFace" type="AnimatedSprite" parent="SceneButton"]
position = Vector2( 232, 156 )
frames = SubResource( 1 )

[node name="Name" type="Label" parent="SceneButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.5
margin_top = -101.5
margin_right = 492.5
margin_bottom = 101.5
custom_fonts/font = ExtResource( 4 )
text = "Back on Track"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="StarsIcon" type="TextureRect" parent="SceneButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 449.5
margin_top = -148.5
margin_right = 542.5
margin_bottom = -59.5
rect_scale = Vector2( 0.5, 0.5 )
texture = SubResource( 10 )

[node name="Stars" type="Label" parent="SceneButton/StarsIcon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -17.5
margin_right = -60.5
margin_bottom = 37.5
grow_horizontal = 0
custom_fonts/font = ExtResource( 4 )
text = "1"
